--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         const response = await fetch('https://api.github.com/repos/famshare/r2020/contents/');
         const data = await response.json();
         let htmlString = '<ul>';
+        let rawUrl = 'https://raw.githubusercontent.com/famshare/R2020/master/';
+        let altUrl = 'https://github.com/famshare/R2020/blob/master/';
         for (let file of data) {
-          htmlString += `<li><a href="${file.path}">${file.name}</a></li>`;
+          htmlString += `<li><a href="${file.download_url ? rawUrl : altUrl}${file.path}">${file.name}</a> ${!file.download_url ? '' : '&nbsp;&nbsp;&nbsp;&nbsp; (<a href="' + altUrl + file.path + '">alt link</a>)'} </li><BR>`;
         }
         htmlString += '</ul>';
         document.getElementsByTagName('body')[0].innerHTML = htmlString;
